--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: url("./assets/money.jpg");
+  background-size: cover;
+  background-repeat: repeat;
+  background-color: green;
+  background-position: center;
 }
