--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,12 @@ body {
   font-family: sans-serif;
   background: url("./assets/money.jpg");
   background-size: cover;
-  background-repeat: repeat;
   background-color: green;
   background-position: center;
+  min-height: 100%;
+  text-align: center;
+}
+
+html {
+  height: 100%;
 }
